<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernameField">Username/Email</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up">New User? Sign Up Here!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_field">Email Address</string>
    <string name="name_field">Name</string>
    <string name="sign_up_button">Sign Up</string>

</resources>
